<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/signupRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp">

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/photo"
            android:contentDescription="@string/photo_description"
            android:scaleType="centerInside"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#333"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_background"
            android:padding="16dp"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_background"
            android:padding="16dp"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"/>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:background="@drawable/button_background"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginBottom="24dp"
            android:padding="14dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/toSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_signup"
                android:textColor="#6200EE"
                android:textSize="14sp"
                android:layout_marginStart="6dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
